Masters/DevOps and Security/lab4-advanced/4-job.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-ns
