Masters/DevOps and Security/lab4-advanced/1-preparation.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app-ns
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: sh3b0/app
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret-volume
              mountPath: /mnt/secret
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: app-secret

---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app-ns
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 30000
      nodePort: 30000
      targetPort: 8080
