Masters/DevOps and Security/lab4-advanced/3-statefulset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sts-ns

---
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
  namespace: sts-ns
  labels:
    app: app
spec:
  ports:
    - port: 80
      name: web
  clusterIP: None
  selector:
    app: app

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-sts
  namespace: sts-ns
  labels:
    app: app
spec:
  replicas: 2
  serviceName: headless-svc
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: sh3b0/app
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: example-volume
              mountPath: /tmp/example
            - name: visits-volume
              mountPath: /app/volume
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /visits
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: example-volume
          emptyDir: {}
        - name: visits-volume
          persistentVolumeClaim:
            claimName: app-pvc

---
apiVersion: v1
kind: Pod
metadata:
  name: rescue-pod
  namespace: sts-ns
spec:
  volumes:
    - name: visits-volume
      persistentVolumeClaim:
        claimName: app-pvc
  containers:
    - name: busybox
      image: busybox
      args: ["tail", "-f", "/dev/null"]
      volumeMounts:
        - mountPath: /mnt
          name: visits-volume
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
